version updates and java level up to 21