@@ -33,7 +33,7 @@ public class TestEngineRunner001 {
             .filter(TestIdentifier::isContainer)
             .map(TestIdentifier::getDisplayName)
             .map(name -> "TestEngineName: " + name)
-            .collect(Collectors.toList())
+            .toList()
             .forEach(out::println);
   }
 }
