@@ -47,7 +47,7 @@ public class TestEngineRunner002 {
             .filter(TestIdentifier::isContainer)
             .map(TestIdentifier::getDisplayName)
             .map(name -> "TestEngineName: " + name)
-            .collect(Collectors.toList())
+            .toList()
             .forEach(out::println);
   }
 
